--- a/styles/main.css
+++ b/styles/main.css
@@ -1361,5 +1361,5 @@ hr {
     margin-top: 40px;
     width: 320px;
   }
-  .wrapper div #form>div input[type=’text’]
-}/*# sourceMappingURL=main.css.map */
+  /* .wrapper div #form>div input[type='text'] */
+}
